# calchat

./: .gitignore  README.md  chainlit.md  pyproject.toml  requirements.md
.chainlit/: config.toml
.files/687ab938-8958-4771-bae6-6e2d174d75c7/: 2da8883e-ab40-4555-9460-4a9a21c32b3c.txt
app/: __init__.py  chainlit_app.py  main.py
app/api/: chat.py
app/prompts/: __init__.py  system_prompt.py
app/services/: __init__.py  cal_api_service.py
app/tools/: __init__.py  calendar_tools.py
app/utils/: __init__.py  api_utils.py  date_utils.py
